--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bsix SCSS</title>
-    <!-- <script
+    <title>NEON</title>
+    <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-154875692-1"
     ></script>
@@ -16,8 +16,8 @@
       gtag("js", new Date());
 
       gtag("config", "UA-154875692-1");
-    </script> -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics  -->
 
   </head>
   <body>
